# kroxy

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CONFIGURATION.md  README.md  config.hpp  http.example.config.json  http2.json  httpsession.hpp  main.cpp  stream.example.config.json  stream.hpp  streamsession.hpp
conf/: kroxy.conf.json
src/: config.cpp  config.hpp  httpsession.cpp  httpsession.hpp  logger.cpp  logger.hpp  main.cpp  selectors.cpp  selectors.hpp  server.cpp  server.hpp  session.hpp  stream.hpp  streamsession.cpp  streamsession.hpp  upstream.cpp  upstream.hpp  utils.hpp  worker.cpp  worker.hpp
tests/: test_config.cpp
tests/test_halfclosed/: client.py  http.config.json  server.py  test.py
tests/test_http_basic/: Cargo.toml  http.config.json
tests/test_http_basic/src/: main.rs
tests/test_http_chunked/: client.py  run.sh  server.py
tests/test_http_timeout/: client.py  http.config.json
tests/test_stream/: Cargo.toml  client.py  server.py  stream.config.json
tests/test_stream/src/: main.rs
tests/test_stream_timeout/: client.py  server.py  stream.config.json
